# llmads

./: .gitignore  README.md  llmad.yaml  pyproject.toml  query.py  test_llm.txt  test_llm_hallucinating.txt
data/Si2_crystal_VASP/: CHGCAR  OUTCAR  PCDAT  POTCAR.stripped  PROCAR  WAVECAR
src/llmad/: cli.py  completion.py  config.py  data_model.py  llm_model.py  main.py  nomad_instructions.py  prompt.py  prompt_generator.py  schemas.py  utils.py
src/llmads/: cli.py  config.py  data_model.py  llm_model.py
src/matllm/: main.py  prompt.py
tests/: test_prompt_generator.py  test_run.py
tests/data/: test.archive.yaml
tests/data/Si2_crystal_VASP/: XDATCAR  output01.txt  sbatch_vasp5.sh  slurm-1027121.out
tests/data/computation/: +symmetry  original_data_NOMADschema.archive.yaml
tests/data/computation/Si2_crystal_VASP/: CHG  DOSCAR  EIGENVAL  INCAR  OSZICAR  OUTCAR2  POSCAR  vasprun.xml
tests/data/examples/: OUTCAR  example1.json  example1.outcar
tests/data/xrd/brml/: ActiveContentContainer.xml  DataContainer.xml  EvaluationContainer.xml  InstructionContainer.xml  PreMeasContainer.xml  RawData0.xml  TemplateContainer.xml  experimentCollection.xml
tests/data/xrd/rasx/: MesurementConditions0.xml  Profile0.txt  root.xml
